--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~bootstrap/dist/css/bootstrap.css';
+/*@import '~font-awesome/css/font-awesome.css';*/
+
+/*@tailwind base;
+@tailwind components;
+@tailwind utilities;*/
+body {
+  margin: 10px;
+}
+
